--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <!-- Footer-->
     <footer class="py-5 bg-dark">
         <div class="container px-4 px-lg-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Gisely Fernanda Dias Pereira</p>
         </div>
     </footer>
 </body>
