--- a/index/index-n.html
+++ b/index/index-n.html
@@ -133,12 +133,14 @@
         <br>
         <br>
 
+        <h1 class="text-center"> Conhecimentos mais utilizados na criação de um site </h1>
+        <br>
 
         <div class="row gx-4 gx-lg-5"><br>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Card One</h2>
+                        <h2 class="card-title">Pagina na WEB</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
                     <div class="card-footer">
@@ -150,7 +152,7 @@
                 <div class="col-12 col-sm-6 col-md-6 d-none d-sm-block"><br></div>
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Card Two</h2>
+                        <h2 class="card-title">Banco de Dados</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
                     </div>
                     <div class="card-footer">
@@ -162,7 +164,7 @@
                 <div class="col-12 col-sm-6 col-md-6 d-none d-sm-block"><br><br></div>
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Card Three</h2>
+                        <h2 class="card-title">Desenvolvimento de Software</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
                     <div class="card-footer">
