--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
     </div>
     </div>
     <!-- Footer-->
-    <footer style="background-color: #b1070e; color: white; padding: 15px; text-align:center; font-family:georgia;" class=" py-5 bg-dark ">
-        <div class="container px-4 px-lg-5 ">
+    <footer class="py-4 af">
+        <div class="container px-4 px-lg-5">
             <p class="m-0 text-center text-white ">Copyright &copy; Gisely Fernanda Dias Pereira 2021 </p>
         </div>
     </footer>
